--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,13 +29,13 @@ jobs:
           template: classic
           base: activity
           base_indepth: yes
+          config_display: columns
           config_timezone: Europe/Istanbul
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_indepth: yes
-          plugin_languages_limit: 10
+          plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
