--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,7 +27,7 @@ jobs:
           # Options
           user: merchizm
           template: classic
-          base: activity
+          base: activity, repositories, metadata
           base_indepth: yes
           config_display: columns
           config_timezone: Europe/Istanbul
@@ -41,3 +41,5 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_stars: yes
+          plugin_stars_limit: 4
